# Wizard-Of-Oz-be

./: .coverage  .docker-compose.prod.yml.swp  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CI_SETUP.md  Docker-compose.dev.yml  Dockerfile  Dockerfile.dev  Dockerfile.nginx  Dockerfile.prod  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  cookies.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.prod.yml.bak  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements.txt  schema.yml
.github/workflows/: ci.yml
api/v1/: urls.py
certbot/conf/renewal/: ozshop.duckdns.org.conf
config/: celery.py  middleware.py  settings.py  urls.py  views_oauth.py
domains/accounts/: __init__.py  admin.py  apps.py  jwt.py  models.py  permissions.py  serializers.py  serializers_addresses.py  serializers_social.py  social.py  urls.py  urls_addresses.py  urls_admin.py  urls_auth.py  urls_users.py  utils.py  validators.py  views.py  views_addresses.py  views_social.py  views_user.py
domains/accounts/migrations/: 0001_initial.py  0002_socialaccount.py  0002_user_users_role_allowed_values.py  0003_rename_accounts_so_provide_2b0a13_idx_social_acco_provide_8ea1fc_idx_and_more.py  0003_useraddress.py
domains/carts/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
domains/carts/migrations/: 0001_initial.py  0002_alter_cartitem_option_key_and_more.py  0003_alter_cartitem_option_key.py
domains/catalog/: admin.py  apps.py  models.py  serializers.py  services.py  urls_categories.py  urls_products.py  urls_stock.py  views_categories.py  views_products.py  views_stock.py
domains/catalog/migrations/: 0001_initial.py  0002_alter_category_options.py  0002_remove_category_categories_name_98d7d5_idx_and_more.py  0003_product_options.py  0003_productimage.py  0004_productimage_is_remote_productimage_remote_url_and_more.py  0005_alter_productstock_option_key.py
domains/orders/: admin.py  apps.py  models.py  serializers.py  services.py  services_merge.py  urls.py  urls_merge.py  urls_shipping.py  utils.py  views.py  views_merge.py  views_shipping.py
domains/orders/migrations/: 0001_initial.py  0002_purchase_pg_purchase_pg_tid.py  0002_remove_purchase_ck_purchase_amount_ge_1_and_more.py  0003_orderitem.py  0004_purchase_shipping_address1_and_more.py
domains/payments/: admin.py  app.py  models.py  serializers.py  serializers_toss.py  services.py  toss_client.py  urls_toss.py  views_toss.py
domains/payments/migrations/: 0001_initial.py
domains/reviews/: apps.py  models.py  serializers.py  urls.py  views.py
domains/reviews/migrations/: 0001_initial.py  0002_auto_20250927_2149.py
domains/shipments/: admin.py  apps.py  models.py  notifications.py  serializers.py  services.py  status_map.py  tasks.py  urls.py  views.py
domains/shipments/adapters/: __init__.py  base.py  provider.py  sweettracker.py
domains/shipments/migrations/: 0001_initial.py
domains/staff/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls_admin.py  urls_admins.py  urls_logs.py  views.py
domains/staff/migrations/: 0001_initial.py  0002_role_super_to_admin.py  (+1 more)
domains/wishlists/: apps.py  models.py  serializers.py  urls.py  views.py
infra/nginx/: app.conf  nginx.conf
nginx/: app.conf
scripts/: entrypoint.sh  run.sh  woz-doctor.sh
shared/: api_markers.py  pagination.py  permissions.py
ssl/: cert.pem  key.pem
tests/: conftest.py  factories.py  test_accounts_auth_addresses.py  test_accounts_jwt.py  test_accounts_models.py  test_accounts_permissions.py  test_accounts_utils.py  test_accounts_validators.py  test_carts_orders_flow.py  test_carts_services.py  test_catalog_endpoints.py  test_catalog_services.py  test_orders_permissions.py  test_orders_services.py  test_orders_utils.py  test_payments_services.py  test_payments_toss_endpoints.py  test_review_flow.py  test_shipments_integration.py  test_shipments_services.py  test_shipments_services_edgecases.py  test_shipments_services_unit.py  test_shipments_views_api.py  test_wishlist_move_to_cart.py
(+4 files in other folders)
