[project]
name = "shopapi"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [

  "celery>=5.5.3",
  "celery[redis]>=5.5.3",
  "django>=5.2.6",
  "django-cors-headers>=4.8.0",
  "django-filter>=25.1",
  "djangorestframework>=3.16.1",
  "djangorestframework-simplejwt>=5.5.1",
  "drf-spectacular>=0.28.0",
  "pillow>=11.3.0",
  "psycopg[binary]>=3.2.10",
  "whitenoise>=6.10.0",
  "gunicorn>=21.2",
  "uvicorn==0.30.*",
  "django-celery-beat>=2.8.1",
  # 트래킹 프록시 때문에 컨테이너 안에서 수동 설치했던 것들 정식 반영
  "httpx>=0.27,<0.28",
  "pydantic>=2.8,<3.0",
  "python-dotenv>=1.0,<2.0",
  "requests>=2.31,<3.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "pytest-django>=4.11.1",
  "pytest-xdist>=3.8.0",
]
